# verilator

./: .clang-tidy  .cmake-format.yaml  .cvsignore  .gitignore  0001-fix-try-lock-spuriously-fails.patch  0002-Allow-for-custom-verilator-revision-in-version-check.patch  0003-Enable-optimization-in-tests.patch  0004-Break-out-macros-to-fix-GCC14-compilation.patch  0004-Fix-GCC14-warnings-on-template-specialization-syntax.patch  CMakeLists.txt  Makefile  changelog  makelog  sources  verilator-3.804.tgz  verilator-3.805.tgz  verilator-5.022-2.fc39.src.rpm  verilator-5.022-4.fc39.src.rpm  verilator-driver.patch  verilator.spec
src/: CMakeLists.txt  V3Active.cpp
